--- a/_config.yml
+++ b/_config.yml
@@ -78,4 +78,7 @@ theme: next
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
-  type:
+  type: git
+  repo: git@github.com:sally6/sally6.github.io.git
+  branch: master
+  #message: [message]
